--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsatlas-app",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "private": true,
   "description": "Client code for DSAtlas",
   "author": {
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
+    "leaflet-ajax": "^2.1.0",
     "leaflet.markercluster": "^1.2.0",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
