--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsatlas-app",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "description": "Client code for DSAtlas",
   "author": {
@@ -17,7 +17,8 @@
     "angular-ui-bootstrap": "^2.5.6",
     "@uirouter/angularjs": "^1.0.12",
     "body-parser": "^1.18.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "3.3.7",
+    "bootstrap-social": "^5.1.1",
     "d3": "^4.12.2",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
