--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsatlas-app",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "private": true,
   "description": "Client code for DSAtlas",
   "author": {
@@ -10,17 +10,20 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.12",
     "angular": "^1.6.8",
     "angular-animate": "^1.6.8",
     "angular-sanitize": "^1.6.8",
     "angular-simple-logger": "^0.1.7",
     "angular-ui-bootstrap": "^2.5.6",
-    "@uirouter/angularjs": "^1.0.12",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.1.1",
+    "config": "^1.29.2",
+    "pug": "^2.0.0-rc.4",
     "d3": "^4.12.2",
     "express": "^4.16.2",
+    "express-mailer": "^0.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
@@ -32,10 +35,12 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "angular-recaptcha": "^4.1.2",
     "jshint": "^2.9.5"
   },
   "engine": "node>=6.0.0",
   "scripts": {
+    "start": "NODE_ENV=production node server.js",
     "lint": "jshint app/**/*.js",
     "lint:checkstyle": "jshint app/**/*.js --reporter checkstyle > checkstyle.xml"
   }
