--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "pug": "^2.0.0-rc.4",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "angular2-uuid": "^1.1.1"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.1",
