--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "leaflet.markercluster": "^1.3.0",
+    "leaflet": "^1.3.1",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
@@ -52,6 +53,8 @@
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19",
+    "angularfire2": "^5.0.0-rc.6",
+    "firebase": "^4.12.0",
     "angular2-uuid": "^1.1.1"
   },
   "devDependencies": {
