--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.3.1",
     "leaflet.markercluster": "^1.3.0",
     "leaflet": "^1.3.1",
+    "libphonenumber-js": "^1.1.5",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
