Making transition to firebase firestore

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "6.0.4",
     "@angular/router": "6.0.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.1",
+    "firebase-admin": "^5.13.1",
+    "express-firebase-middleware": "^2.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
@@ -43,8 +45,6 @@
     "libphonenumber-js": "^1.1.5",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
-    "mongoose": "^5.0.7",
-    "mongoose-uuid2": "^2.1.0",
     "morgan": "^1.9.0",
     "ngx-filter-pipe": "^2.1.0",
     "ngx-order-pipe": "^2.0.1",
@@ -57,7 +57,6 @@
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26",
     "angularfire2": "^5.0.0-rc.6",
-    "firebase": "^4.12.0",
     "ngx-toastr": "^8.3.0",
     "angular2-uuid": "^1.1.1"
   },
@@ -74,7 +73,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.4",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
